--- a/blanktest.ipynb
+++ b/blanktest.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "(100,)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(100,)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "       -1., -1., -1., -1., -1., -1., -1., -1., -1.])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "       0.05335905, 0.03991088, 0.02354118, 0.        , 0.        ])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x144f33990>"
+       "<matplotlib.legend.Legend at 0x1696a18d0>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -274,16 +274,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x144f7f390>"
+       "<matplotlib.legend.Legend at 0x1697a5610>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,16 +358,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x175ec01d0>"
+       "<matplotlib.colorbar.Colorbar at 0x16983eb50>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "       16, 15, 14, 13, 12, 11, 10,  9,  8,  7,  6,  5,  4,  3,  2,  1])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "<Quantity 0. arcsec>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "           [1., 1., 1., ..., 1., 1., 1.]] Jy / arcsec2>"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "Text(0.5, 1.0, 'Radius = 20, Background = 1')"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "50"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -656,12 +656,12 @@
     }
    ],
    "source": [
-    "std = annulus_stdev(starry.value,r_blanky.value,info)"
+    "std = annulus_stdev(starry.value,r_blanky.value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        " nan]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
        "Text(0, 0.5, 'Arbitrary Stdev (Jy/arc2)')"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1013,7 +1013,7 @@
        "Text(0, 0.5, 'Arbitrary Intensity (Jy/arcsec^2)')"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
