overall code update

--- a/lowhigh.ipynb
+++ b/lowhigh.ipynb
@@ -507,7 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {'hr': data_1d3['hr'], 'lr': data_1d3['lr'], 'reproj': data_1d3['reproj'],\"csm\": data_1d3['csm']}"
+    "d = {'hr': data_1d3['hr'], 'lr': data_1d3['lr'], 'reproj': data_1d3['reproj'],\"csm\": data_1d3['csm']}\n",
+    "i = {'hr': info3['hr'], 'lr': info3['lr'], 'reproj': info3['reproj'],\"csm\": info3['csm']}"
    ]
   },
   {
@@ -516,7 +517,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abels = all_abel(d,radius3)"
+    "abels = all_abel(d,radius3,i)"
    ]
   },
   {
