made figures for thesis

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "2       2015-11-06         3.451490e+11               2.0    71.000000  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,20 +513,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>File</th>\n",
+       "      <th>Telescope</th>\n",
+       "      <th>RA (deg)</th>\n",
+       "      <th>DEC (deg)</th>\n",
+       "      <th>Resolution (arc)</th>\n",
+       "      <th>Observation Date</th>\n",
+       "      <th>Pixel Size (mas)</th>\n",
+       "      <th>Theta (deg)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>'Low'</td>\n",
+       "      <td>ALMA</td>\n",
+       "      <td>88.793046</td>\n",
+       "      <td>7.407103</td>\n",
+       "      <td>0.184441</td>\n",
+       "      <td>2016-08-16</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>-49.061874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>'Medium'</td>\n",
+       "      <td>ALMA</td>\n",
+       "      <td>88.793046</td>\n",
+       "      <td>7.407103</td>\n",
+       "      <td>0.040566</td>\n",
+       "      <td>2015-11-06</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>46.752430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>'High'</td>\n",
+       "      <td>ALMA</td>\n",
+       "      <td>88.793046</td>\n",
+       "      <td>7.407103</td>\n",
+       "      <td>0.018229</td>\n",
+       "      <td>2015-11-06</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>71.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       File Telescope   RA (deg)  DEC (deg)  Resolution (arc)  \\\n",
+       "0     'Low'      ALMA  88.793046   7.407103          0.184441   \n",
+       "1  'Medium'      ALMA  88.793046   7.407103          0.040566   \n",
+       "2    'High'      ALMA  88.793046   7.407103          0.018229   \n",
+       "\n",
+       "  Observation Date  Pixel Size (mas)  Theta (deg)  \n",
+       "0       2016-08-16              30.0   -49.061874  \n",
+       "1       2015-11-06               5.0    46.752430  \n",
+       "2       2015-11-06               2.0    71.000000  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop('Rest Frequency (Hz)', axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\begin{tabular}{llrrrlrrr}\n",
+      "\\begin{tabular}{llrrrlrr}\n",
       "\\toprule\n",
-      "File & Telescope & RA (deg) & DEC (deg) & Resolution (arc) & Observation Date & Rest Frequency (Hz) & Pixel Size (mas) & Theta (deg) \\\\\n",
+      "File & Telescope & RA (deg) & DEC (deg) & Resolution (arc) & Observation Date & Pixel Size (mas) & Theta (deg) \\\\\n",
       "\\midrule\n",
-      "'Low' & ALMA & 88.793 & 7.407 & 0.184 & 2016-08-16 & 345795990000.000 & 30.000 & -49.062 \\\\\n",
-      "'Medium' & ALMA & 88.793 & 7.407 & 0.041 & 2015-11-06 & 330587965300.000 & 5.000 & 46.752 \\\\\n",
-      "'High' & ALMA & 88.793 & 7.407 & 0.018 & 2015-11-06 & 345148970800.000 & 2.000 & 71.000 \\\\\n",
+      "'Low' & ALMA & 88.793 & 7.407 & 0.184 & 2016-08-16 & 30.000 & -49.062 \\\\\n",
+      "'Medium' & ALMA & 88.793 & 7.407 & 0.041 & 2015-11-06 & 5.000 & 46.752 \\\\\n",
+      "'High' & ALMA & 88.793 & 7.407 & 0.018 & 2015-11-06 & 2.000 & 71.000 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -534,17 +629,105 @@
     }
    ],
    "source": [
-    "print(df.to_latex(index=False,\n",
+    "print(df.drop('Rest Frequency (Hz)', axis = 1).to_latex(index=False,\n",
     "                  formatters={\"name\": str.upper},\n",
     "                  float_format=\"{:.3f}\".format))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SIMPLE  =                    T /Standard FITS                                   \n",
+       "BITPIX  =                  -32 /Floating point (32 bit)                         \n",
+       "NAXIS   =                    4                                                  \n",
+       "NAXIS1  =                  300                                                  \n",
+       "NAXIS2  =                  300                                                  \n",
+       "NAXIS3  =                    1                                                  \n",
+       "NAXIS4  =                    1                                                  \n",
+       "EXTEND  =                    T                                                  \n",
+       "BSCALE  =   1.000000000000E+00 /PHYSICAL = PIXEL*BSCALE + BZERO                 \n",
+       "BZERO   =   0.000000000000E+00                                                  \n",
+       "BMAJ    =   5.805555555556E-06                                                  \n",
+       "BMIN    =   4.416666666667E-06                                                  \n",
+       "BPA     =   7.100000000000E+01                                                  \n",
+       "BTYPE   = 'Intensity'                                                           \n",
+       "OBJECT  = '        '                                                            \n",
+       "                                                                                \n",
+       "BUNIT   = 'Jy/beam '           /Brightness (pixel) unit                         \n",
+       "EQUINOX =   2.000000000000E+03                                                  \n",
+       "RADESYS = 'FK5     '                                                            \n",
+       "LONPOLE =   1.800000000000E+02                                                  \n",
+       "LATPOLE =   7.407103055556E+00                                                  \n",
+       "PC01_01 =   1.000000000000E+00                                                  \n",
+       "PC02_01 =   0.000000000000E+00                                                  \n",
+       "PC03_01 =   0.000000000000E+00                                                  \n",
+       "PC04_01 =   0.000000000000E+00                                                  \n",
+       "PC01_02 =   0.000000000000E+00                                                  \n",
+       "PC02_02 =   1.000000000000E+00                                                  \n",
+       "PC03_02 =   0.000000000000E+00                                                  \n",
+       "PC04_02 =   0.000000000000E+00                                                  \n",
+       "PC01_03 =   0.000000000000E+00                                                  \n",
+       "PC02_03 =   0.000000000000E+00                                                  \n",
+       "PC03_03 =   1.000000000000E+00                                                  \n",
+       "PC04_03 =   0.000000000000E+00                                                  \n",
+       "PC01_04 =   0.000000000000E+00                                                  \n",
+       "PC02_04 =   0.000000000000E+00                                                  \n",
+       "PC03_04 =   0.000000000000E+00                                                  \n",
+       "PC04_04 =   1.000000000000E+00                                                  \n",
+       "CTYPE1  = 'RA---SIN'                                                            \n",
+       "CRVAL1  =   8.879304583333E+01                                                  \n",
+       "CDELT1  =  -5.555555555556E-07                                                  \n",
+       "CRPIX1  =   1.510000000000E+02                                                  \n",
+       "CUNIT1  = 'deg     '                                                            \n",
+       "CTYPE2  = 'DEC--SIN'                                                            \n",
+       "CRVAL2  =   7.407103055556E+00                                                  \n",
+       "CDELT2  =   5.555555555556E-07                                                  \n",
+       "CRPIX2  =   1.510000000000E+02                                                  \n",
+       "CUNIT2  = 'deg     '                                                            \n",
+       "CTYPE3  = 'FREQ    '                                                            \n",
+       "CRVAL3  =   3.380544904895E+11                                                  \n",
+       "CDELT3  =   1.576353758899E+10                                                  \n",
+       "CRPIX3  =   1.000000000000E+00                                                  \n",
+       "CUNIT3  = 'Hz      '                                                            \n",
+       "CTYPE4  = 'STOKES  '                                                            \n",
+       "CRVAL4  =   1.000000000000E+00                                                  \n",
+       "CDELT4  =   1.000000000000E+00                                                  \n",
+       "CRPIX4  =   1.000000000000E+00                                                  \n",
+       "CUNIT4  = '        '                                                            \n",
+       "PV2_1   =   0.000000000000E+00                                                  \n",
+       "PV2_2   =   0.000000000000E+00                                                  \n",
+       "RESTFRQ =   3.451489708000E+11 /Rest Frequency (Hz)                             \n",
+       "SPECSYS = 'LSRK    '           /Spectral reference frame                        \n",
+       "ALTRVAL =   6.162184652029E+06 /Alternate frequency reference value             \n",
+       "ALTRPIX =   1.000000000000E+00 /Alternate frequency reference pixel             \n",
+       "VELREF  =                  257 /1 LSR, 2 HEL, 3 OBS, +256 Radio                 \n",
+       "COMMENT casacore non-standard usage: 4 LSD, 5 GEO, 6 SOU, 7 GAL                 \n",
+       "TELESCOP= 'ALMA    '                                                            \n",
+       "OBSERVER= 'pkervella'                                                           \n",
+       "DATE-OBS= '2015-11-06T08:54:49.872000'                                          \n",
+       "TIMESYS = 'UTC     '                                                            \n",
+       "OBSRA   =   8.879304583333E+01                                                  \n",
+       "OBSDEC  =   7.407103055556E+00                                                  \n",
+       "OBSGEO-X=   2.225142180269E+06                                                  \n",
+       "OBSGEO-Y=  -5.440307370349E+06                                                  \n",
+       "OBSGEO-Z=  -2.481029851874E+06                                                  \n",
+       "DATE    = '2017-05-23T14:05:34.017000' /Date FITS file was written              \n",
+       "ORIGIN  = 'CASA 4.7.2-REL (r39762)'                                             "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ihigh['header']"
+   ]
   },
   {
    "cell_type": "code",
