--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -645,16 +645,16 @@
        "SIMPLE  =                    T /Standard FITS                                   \n",
        "BITPIX  =                  -32 /Floating point (32 bit)                         \n",
        "NAXIS   =                    4                                                  \n",
-       "NAXIS1  =                  300                                                  \n",
-       "NAXIS2  =                  300                                                  \n",
+       "NAXIS1  =                 1000                                                  \n",
+       "NAXIS2  =                 1000                                                  \n",
        "NAXIS3  =                    1                                                  \n",
        "NAXIS4  =                    1                                                  \n",
        "EXTEND  =                    T                                                  \n",
        "BSCALE  =   1.000000000000E+00 /PHYSICAL = PIXEL*BSCALE + BZERO                 \n",
        "BZERO   =   0.000000000000E+00                                                  \n",
-       "BMAJ    =   5.805555555556E-06                                                  \n",
-       "BMIN    =   4.416666666667E-06                                                  \n",
-       "BPA     =   7.100000000000E+01                                                  \n",
+       "BMAJ    =   1.204335441192E-05                                                  \n",
+       "BMIN    =   1.054336316884E-05                                                  \n",
+       "BPA     =   4.675242996216E+01                                                  \n",
        "BTYPE   = 'Intensity'                                                           \n",
        "OBJECT  = '        '                                                            \n",
        "                                                                                \n",
@@ -681,17 +681,17 @@
        "PC04_04 =   1.000000000000E+00                                                  \n",
        "CTYPE1  = 'RA---SIN'                                                            \n",
        "CRVAL1  =   8.879304583333E+01                                                  \n",
-       "CDELT1  =  -5.555555555556E-07                                                  \n",
-       "CRPIX1  =   1.510000000000E+02                                                  \n",
+       "CDELT1  =  -1.388888888889E-06                                                  \n",
+       "CRPIX1  =   5.010000000000E+02                                                  \n",
        "CUNIT1  = 'deg     '                                                            \n",
        "CTYPE2  = 'DEC--SIN'                                                            \n",
        "CRVAL2  =   7.407103055556E+00                                                  \n",
-       "CDELT2  =   5.555555555556E-07                                                  \n",
-       "CRPIX2  =   1.510000000000E+02                                                  \n",
+       "CDELT2  =   1.388888888889E-06                                                  \n",
+       "CRPIX2  =   5.010000000000E+02                                                  \n",
        "CUNIT2  = 'deg     '                                                            \n",
        "CTYPE3  = 'FREQ    '                                                            \n",
-       "CRVAL3  =   3.380544904895E+11                                                  \n",
-       "CDELT3  =   1.576353758899E+10                                                  \n",
+       "CRVAL3  =   3.380270139742E+11                                                  \n",
+       "CDELT3  =   1.581849046807E+10                                                  \n",
        "CRPIX3  =   1.000000000000E+00                                                  \n",
        "CUNIT3  = 'Hz      '                                                            \n",
        "CTYPE4  = 'STOKES  '                                                            \n",
@@ -701,32 +701,32 @@
        "CUNIT4  = '        '                                                            \n",
        "PV2_1   =   0.000000000000E+00                                                  \n",
        "PV2_2   =   0.000000000000E+00                                                  \n",
-       "RESTFRQ =   3.451489708000E+11 /Rest Frequency (Hz)                             \n",
+       "RESTFRQ =   3.305879653000E+11 /Rest Frequency (Hz)                             \n",
        "SPECSYS = 'LSRK    '           /Spectral reference frame                        \n",
-       "ALTRVAL =   6.162184652029E+06 /Alternate frequency reference value             \n",
+       "ALTRVAL =  -6.746073424648E+06 /Alternate frequency reference value             \n",
        "ALTRPIX =   1.000000000000E+00 /Alternate frequency reference pixel             \n",
        "VELREF  =                  257 /1 LSR, 2 HEL, 3 OBS, +256 Radio                 \n",
        "COMMENT casacore non-standard usage: 4 LSD, 5 GEO, 6 SOU, 7 GAL                 \n",
        "TELESCOP= 'ALMA    '                                                            \n",
        "OBSERVER= 'pkervella'                                                           \n",
-       "DATE-OBS= '2015-11-06T08:54:49.872000'                                          \n",
+       "DATE-OBS= '2015-11-06T08:54:51.888001'                                          \n",
        "TIMESYS = 'UTC     '                                                            \n",
        "OBSRA   =   8.879304583333E+01                                                  \n",
        "OBSDEC  =   7.407103055556E+00                                                  \n",
        "OBSGEO-X=   2.225142180269E+06                                                  \n",
        "OBSGEO-Y=  -5.440307370349E+06                                                  \n",
        "OBSGEO-Z=  -2.481029851874E+06                                                  \n",
-       "DATE    = '2017-05-23T14:05:34.017000' /Date FITS file was written              \n",
+       "DATE    = '2017-04-24T17:43:04.153000' /Date FITS file was written              \n",
        "ORIGIN  = 'CASA 4.7.2-REL (r39762)'                                             "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ihigh['header']"
+    "imed['header']"
    ]
   },
   {
