--- a/medhigh.ipynb
+++ b/medhigh.ipynb
@@ -3259,7 +3259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mass Plots"
+    "## Total Mass Calculation and Plots"
    ]
   },
   {
